--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: blue;
+}
+
 .content{
     width: 900px;
     margin: 0 auto;
@@ -10,6 +14,29 @@
 }
 
 .square{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     aspect-ratio: 1;
     border: 1px solid black;
+}
+
+.num_squere{
+    background-color: rgb(12, 94, 41);
+    color: white;
+}
+
+.fizz{
+    background-color: blueviolet;
+    color:white;
+}
+
+.fizzbuzz{
+    background-color:rgb(255, 140, 0) ;
+    color: blueviolet;
+}
+
+.buzz{
+    background-color: rgb(0, 187, 255);
+    color: rgb(235, 68, 68);
 }
