--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body{
     background-color: blue;
 }
 
+.title{
+    color: white;
+    text-align: center;
+}
+
 .content{
     width: 900px;
     margin: 0 auto;
