--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(0, 0, 255);
+    background-color:#003C4E;
 }
 
 .title{
@@ -14,7 +14,7 @@ body{
 
 .main_page{
     display: grid;
-    grid-template-columns: repeat(10,1fr);
+    grid-template-columns: repeat(7,1fr);
     gap: 10px;
 }
 
@@ -27,21 +27,21 @@ body{
 }
 
 .num_squere{
-    background-color: rgb(12, 94, 41);
-    color: white;
+    background-color: #008CB6;
+    color: black
 }
 
 .fizz{
-    background-color: blueviolet;
-    color:white;
+    background-color: #00DA9D;
+    color:black;
 }
 
 .fizzbuzz{
-    background-color:rgb(255, 140, 0) ;
-    color: blueviolet;
+    background-color:#FF2E6D ;
+    color: balck;
 }
 
 .buzz{
-    background-color: rgb(0, 187, 255);
-    color: rgb(235, 68, 68);
+    background-color: #FFCF4E;
+    color:black;
 }
